# secure-engine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOAL.md  LICENSE  PLAN.md  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
apps/secure-cli/: Cargo.toml
apps/secure-cli/src/: main.rs
apps/secure-cli/tests/: cli_contract.rs
apps/secure-desktop/: Cargo.toml
apps/secure-desktop/src/: lib.rs  main.rs
crates/secure-engine/: Cargo.toml
crates/secure-engine/examples/: mock_secure_skill.rs
crates/secure-engine/src/: ai.rs  baseline.rs  cache.rs  classify.rs  evidence_contract.rs  export.rs  framework_sources.rs  graph.rs  history.rs  language.rs  lib.rs  model.rs  parser.rs  sarif.rs  scan.rs  semantics.rs  source.rs  storage.rs  taxonomy.rs  workspace.rs
crates/secure-engine/tests/: ai_phase6.rs  contract.rs  contract_v2_phase67.rs  evidence_semantics_phase66.rs  generalization_phase610.rs  generalization_phase611.rs  generalization_phase611_tranche2.rs  generalization_phase611_tranche3.rs  generalization_phase612_tranche2.rs  generalization_phase612_tranche3.rs  generalization_phase612_tranche4.rs  generalization_phase613_tranche1.rs  generalization_phase613_tranche2.rs  generalization_phase613_tranche3.rs  generalization_phase615_tranche1.rs  generalization_phase615_tranche2.rs  generalization_phase615_tranche3.rs  generalization_phase615_tranche4.rs  generalization_phase67.rs  generalization_phase69.rs  graph_phase3.rs  inventory_phase1.rs  multilang_phase5.rs  parsing_phase2.rs  phase612_tranche1_summary_completeness.rs  precision_phase65.rs  product_phase4.rs  remediation_phase68.rs  remediation_phase69.rs  retired_diagnostics_phase67.rs  retired_handoff_phase610.rs  retired_handoff_phase69.rs
docs/: ai-validation.md  development.md  evidence-contract-v2.md  evidence-graph-and-rules.md  evidence-semantics.md  fedora-packaging.md  independent-fixture-methodology-phase610.md  independent-fixture-methodology-phase66.md  independent-fixture-methodology-phase67.md  independent-fixture-methodology-phase68.md  independent-fixture-methodology-phase69.md  parsing-normalized-facts.md  phase4-cli-desktop.md  phase610-root-cause-analysis.md  phase611-retrospective-development-results.md  phase611-root-cause-analysis.md  phase611-tranche2-root-cause-remediation.md  phase611-tranche3-root-cause-remediation.md  phase612-root-cause-prioritization.md  phase612-tranche1-summary-completeness.md  phase612-tranche2-derived-guard-resource-identity.md  phase612-tranche3-shell-program-text.md  phase612-tranche4-object-literal-destructuring.md  phase613-tranche1-retired-holdout-v3-propagation.md  phase613-tranche2-authorization-contract-boundary.md  phase613-tranche3-retired-holdout-v3-false-positive-analysis.md  phase615-cross-language-security-invariants.md  phase67-root-cause-analysis.md  phase68-root-cause-analysis.md  phase69-root-cause-analysis.md  release-notes-v0.1.7-rc1.md  release-notes-v0.1.8-rc1.md  release-notes-v0.1.8-rc2.md  release-notes-v0.1.9-rc1.md  repository-inventory.md  secure-json-v1.md  taxonomy-and-precision.md  verification-fedora-phase3.md  verification-fedora-phase4.md  verification-fedora-phase5.md  (+8 more)
docs/adr/: 0001-phase-0-foundation.md  0002-phase-1-repository-inventory.md  0003-phase-2-parsing-and-cache.md  0004-phase-3-evidence-graph-and-rules.md  0005-phase-4-local-product-boundaries.md  0006-phase-5-multi-language-adapters.md  0007-phase-6-optional-ai-validation.md  0008-phase-6-5-neutral-taxonomy-and-precision.md  0009-phase-6-6-explicit-evidence-semantics.md  0010-phase-6-7-contract-v2-remediation.md  0011-phase-6-8-retired-evidence-remediation.md  0012-phase-6-9-retired-phase15-remediation.md  0013-phase-6-10-authorization-wrapper-generalization.md  0014-phase-6-11-retired-phase19-generalization-tranche-1.md  0015-phase-6-11-tranche2-dynamic-callee-and-path-confinement.md  0016-phase-6-11-tranche3-redirect-origin-and-property-connectivity.md  0017-phase-6-12-bounded-value-preserving-call-summaries.md  0018-phase-6-12-derived-guard-resource-identity.md  0019-phase-6-12-shell-program-text-identity.md  0020-phase-6-12-object-literal-property-identity.md  0021-phase-6-13-bounded-forward-value-propagation.md  0022-phase-6-13-no-implicit-protected-map-mutations.md  0023-phase-6-13-exact-outbound-url-projection.md
fixtures/integration-project/: .gitignore  Cargo.toml
fixtures/phase2-js-ts/: package.json
fixtures/phase3-rules/: malformed.ts  package.json  safe.ts  unresolved.ts  vulnerable.ts
fixtures/phase6-ai/: adversarial.json  contradicted.json  insufficient.json  malformed.json  questioned.json  supported.json
fixtures/phase610-cms-nova-handoff/: README.md  summary.json
fixtures/phase611-generalization/: README.md
rules/: README.md
schemas/: secure-ai-assessment-v1.schema.json  secure-json-v1.schema.json
tools/: phase611-classify-results.sh  phase611-retrospective-rescore.sh
(+201 files in other folders)
