[package]
name = "secure-cli"
description = "Command-line interface for Secure Engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "secure"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ctrlc.workspace = true
secure-engine.workspace = true
serde_json.workspace = true

[dev-dependencies]
jsonschema.workspace = true
tempfile.workspace = true

[lints]
workspace = true
