[package]
name = "secure-desktop"
description = "Small native Secure Engine inventory interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel.workspace = true
eframe.workspace = true
secure-engine.workspace = true

[lints]
workspace = true
