[package]
name = "secure-desktop"
description = "Small native Secure Engine inventory interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel.workspace = true
eframe.workspace = true
rfd.workspace = true
secure-engine.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
