[package]
name = "secure-engine"
description = "Shared deterministic inventory, parsing, evidence graph, rules, and secure-json-v1 model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
globset.workspace = true
ignore.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
jsonschema.workspace = true
tempfile.workspace = true

[lints]
workspace = true
